added header and adaptive it

--- a/app/html/components/_header.html
+++ b/app/html/components/_header.html
@@ -1,6 +1,14 @@
 <header class="header">
-  <div class="conatiner">
-    
+  <div class="container">
+    <div class="header__inner d-flex">
+      <a href="#">
+        <img class="header__logo" src="images/logo.svg" alt="Логотип">
+      </a>
+      <div class="header__contacts">
+        <a class="header__contact" href="tel:+380952553020">+38 (095) 255-30-20</a>
+        <a class="header__contact" data-only-sms="(Только для сообщений)" href="tel:+380953599519">+38 (095) 359-95-19</a>
+      </div>
+    </div>
   </div>
 </header>
 
