--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,3 +1,10 @@
 // Colors
 $white: #fff;
 $black: #000;
+$blue: #0252ff;
+$dark-blue: #3035c4;
+$blue-shadow: #000b44;
+$green: #4caf50;
+
+// Breakpoints
+$md: 768;
