--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,3 +1,84 @@
 .header {
-  // Styles
+  padding: 24px 0 23px;
+  box-shadow: 0 10px 40px rgba($blue-shadow, 0.22);
+  background-color: $dark-blue;
+
+  &__inner {
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__contacts {
+    display: flex;
+    align-items: center;
+  }
+
+  &__contact {
+    position: relative;
+    display: flex;
+    align-items: center;
+    font-family: "Montserrat";
+    font-weight: 700;
+    font-size: 1.6rem;
+    letter-spacing: 1px;
+    color: $white;
+
+    &::before {
+      content: "";
+      margin-right: 8px;
+      width: 24px;
+      height: 24px;
+      background-image: url("../images/whatsapp.svg");
+
+      @include rmax($md) {
+        margin-right: 0;
+        width: 38px;
+        height: 38px;
+        background-size: cover;
+      }
+    }
+
+    &::after {
+      content: attr(data-only-sms);
+      position: absolute;
+      left: 50%;
+      bottom: -10px;
+      font-family: "Lato";
+      font-weight: 400;
+      font-size: 1rem;
+      white-space: nowrap;
+      color: $white;
+      transform: translateX(-37%);
+
+      @include rmax($md) {
+        display: none;
+      }
+    }
+
+    &:not(:last-child) {
+      margin-right: 32px;
+
+      &::before {
+        margin-right: 9px;
+        width: 20px;
+        height: 20px;
+        background-image: url("../images/phone.svg");
+
+        @include rmax($md) {
+          margin-right: 0;
+          width: 30px;
+          height: 30px;
+        }
+      }
+
+      @include rmax($md) {
+        margin-right: 28px;
+      }
+    }
+
+    @include rmax($md) {
+      font-size: 0;
+      letter-spacing: 0;
+    }
+  }
 }
