--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,10 +1,17 @@
 // Colors
 $white: #fff;
+$dark-white: #fafafa;
+$dark: #23283b;
 $black: #000;
 $blue: #0252ff;
 $dark-blue: #3035c4;
 $blue-shadow: #000b44;
+$shadow: #495fd3;
 $green: #4caf50;
+$red: #e6514a;
+$gold: #e6c44a;
 
 // Breakpoints
+$xl: 1200;
 $md: 768;
+$sm: 575;
