--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,5 +1,9 @@
 .header {
+  position: fixed;
+  top: 0;
+  z-index: 100;
   padding: 24px 0 23px;
+  width: 100%;
   box-shadow: 0 10px 40px rgba($blue-shadow, 0.22);
   background-color: $dark-blue;
 
