--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -41,17 +41,39 @@ p {
 }
 
 .title {
+  position: relative;
   font-family: "Montserrat";
   font-weight: 800;
   font-size: 4rem;
   line-height: 1.3;
   color: $dark;
 
+  &::after {
+    content: attr(data-headline);
+    position: absolute;
+    left: 52px;
+    top: -34px;
+    font-family: "Lato";
+    font-weight: 400;
+    font-size: 1.4rem;
+  }
+
   &--big {
     font-size: 4.8rem;
 
     @include rmax($sm) {
       font-size: 2.9rem;
+    }
+  }
+
+  &--line {
+    &::before {
+      content: "";
+      position: absolute;
+      top: -27px;
+      width: 40px;
+      height: 1px;
+      background-color: $red;
     }
   }
 }
