added utility section

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -10,6 +10,8 @@ $shadow: #495fd3;
 $green: #4caf50;
 $red: #e6514a;
 $gold: #e6c44a;
+$light-purple: #dedeff;
+$dark-purple: #9d9dce;
 
 // Breakpoints
 $xl: 1200;
