--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,4 +5,5 @@
 @import "components/header";
 @import "parts/hero";
 @import "parts/benefits";
+@import "parts/utility";
 @import "components/footer";
