--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -10,6 +10,7 @@ html {
 }
 
 body {
+  counter-reset: heading;
   overflow-x: hidden;
   font-family: "Lato", sans-serif;
   font-weight: 400;
@@ -48,14 +49,18 @@ p {
   line-height: 1.3;
   color: $dark;
 
-  &::after {
+  &::before {
     content: attr(data-headline);
     position: absolute;
-    left: 52px;
+    left: 0;
     top: -34px;
+    padding-left: 52px;
     font-family: "Lato";
     font-weight: 400;
     font-size: 1.4rem;
+    background-image: url("../images/line.svg");
+    background-position: center left;
+    background-repeat: no-repeat;
   }
 
   &--big {
@@ -66,14 +71,12 @@ p {
     }
   }
 
-  &--line {
+  &--center {
+    text-align: center;
+
     &::before {
-      content: "";
-      position: absolute;
-      top: -27px;
-      width: 40px;
-      height: 1px;
-      background-color: $red;
+      left: 50%;
+      transform: translateX(-50%);
     }
   }
 }
@@ -133,6 +136,41 @@ p {
   height: 1px !important;
   clip: rect(1px, 1px, 1px, 1px);
   /* stylelint-enable */
+}
+
+.slider-btns {
+  display: flex;
+  justify-content: space-between;
+
+  &__btn {
+    outline: transparent;
+    border: none;
+    border-radius: 50%;
+    width: 56px;
+    height: 56px;
+    background-image: url("../images/slider-btn-arrow.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: $white;
+    transition: background-color 0.3s, box-shadow 0.3s;
+    cursor: pointer;
+
+    &:focus {
+      box-shadow: inset 0 0 0 4px rgba($dark-purple, 0.5);
+    }
+
+    &:hover {
+      background-color: $light-purple;
+    }
+
+    &:active {
+      background-color: $dark-purple;
+    }
+
+    &:last-child {
+      transform: rotate(180deg);
+    }
+  }
 }
 
 // BEM Helper
