--- a/app/scss/parts/_utility.scss
+++ b/app/scss/parts/_utility.scss
@@ -1,15 +1,9 @@
 .utility {
-  &__container {
-    // padding: 0;
-  }
+  overflow: hidden;
 
   &__title {
     margin: 0 auto 52px;
     max-width: 970px;
-  }
-
-  &__slider {
-    margin: 0 auto;
   }
 
   &__wrapper {
@@ -29,8 +23,7 @@
     max-width: 370px;
 
     &::after {
-      counter-increment: heading 1;
-      content: counter(heading);
+      content: attr(data-slide-count);
       position: absolute;
       right: 32px;
       bottom: 21px;
@@ -38,6 +31,12 @@
       font-weight: 800;
       font-size: 19rem;
       color: rgba($light-purple, 0.4);
+    }
+
+    @include rmax($sm) {
+      margin-bottom: 16px;
+      padding: 20px 20px 32px;
+      min-height: 390px;
     }
   }
 
@@ -49,11 +48,32 @@
     font-size: 2rem;
     line-height: 1.3;
     color: $dark;
+
+    @include rmax($sm) {
+      margin-bottom: 16px;
+      font-size: 1.6rem;
+    }
   }
 
   &__text {
     &:not(:last-child) {
       margin-bottom: 24px;
+
+      @include rmax($sm) {
+        margin-bottom: 16px;
+      }
+    }
+  }
+
+  &__btns {
+    margin: 0 auto;
+
+    @include rmax($sm) {
+      justify-content: center;
+
+      .slider-btns__btn {
+        display: none;
+      }
     }
   }
 }
