added advantages section

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,4 +6,5 @@
 @import "parts/hero";
 @import "parts/benefits";
 @import "parts/utility";
+@import "parts/advantages";
 @import "components/footer";
