--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -58,6 +58,7 @@ p {
     font-family: "Lato";
     font-weight: 400;
     font-size: 1.4rem;
+    white-space: nowrap;
     background-image: url("../images/line.svg");
     background-position: center left;
     background-repeat: no-repeat;
@@ -69,6 +70,10 @@ p {
     @include rmax($sm) {
       font-size: 2.9rem;
     }
+  }
+
+  &--sm {
+    font-size: 3.2rem;
   }
 
   &--center {
