--- a/app/scss/parts/_utility.scss
+++ b/app/scss/parts/_utility.scss
@@ -68,13 +68,12 @@
 
   &__btns {
     margin: 0 auto;
+  }
 
+  &__btn {
     @include rmax($sm) {
-      justify-content: center;
-
-      .slider-btns__btn {
-        display: none;
-      }
+      display: block;
+      margin: 0 auto;
     }
   }
 
