--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,4 +7,5 @@
 @import "parts/benefits";
 @import "parts/utility";
 @import "parts/advantages";
+@import "parts/skills";
 @import "components/footer";
