added conclusion section

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,4 +8,5 @@
 @import "parts/utility";
 @import "parts/advantages";
 @import "parts/skills";
+@import "parts/conclusion";
 @import "components/footer";
