--- a/app/scss/parts/_benefits.scss
+++ b/app/scss/parts/_benefits.scss
@@ -8,7 +8,7 @@
 
   &__list {
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
 
     @include rmax($sm) {
       justify-content: center;
