added test modal window

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,7 @@
 @import "mixin";
 @import "global";
 @import "components/header";
+@import "components/modals";
 @import "parts/hero";
 @import "parts/benefits";
 @import "parts/utility";
