--- a/app/scss/parts/_skills.scss
+++ b/app/scss/parts/_skills.scss
@@ -58,7 +58,7 @@
     position: relative;
     margin-bottom: 28px;
     font-weight: 800;
-    font-size: 20px;
+    font-size: 2rem;
     color: $dark-blue;
 
     &::before {
@@ -84,11 +84,26 @@
     font-family: "Lato";
   }
 
-  &__link {
+  &__btn {
+    border-radius: 0;
+    padding: 0;
+    min-width: auto;
     font-weight: 800;
-    font-size: 16px;
     line-height: 1.3;
     color: $dark-blue;
+    background-color: transparent;
+
+    &:focus {
+      box-shadow: none;
+    }
+
+    &:hover {
+      background-color: transparent;
+    }
+
+    &:active {
+      background-color: transparent;
+    }
   }
 
   &__btns {
@@ -98,7 +113,7 @@
   &__info {
     padding: 0 15px;
     max-width: 1000px;
-    font-size: 14px;
+    font-size: 1.4rem;
     text-align: center;
     color: $white;
   }
