--- a/app/scss/components/_modals.scss
+++ b/app/scss/components/_modals.scss
@@ -70,6 +70,12 @@
       font-size: 5.2rem;
       text-transform: uppercase;
       color: $red;
+
+      @include rmax($sm) {
+        display: block;
+        margin-bottom: 16px;
+        width: 100%;
+      }
     }
 
     &::after {
@@ -80,6 +86,15 @@
       width: 20px;
       height: 2px;
       background-color: $dark-blue;
+
+      @include rmax($sm) {
+        display: none;
+      }
+    }
+
+    @include rmax($sm) {
+      flex-wrap: wrap;
+      text-align: center;
     }
   }
 
@@ -97,5 +112,9 @@
     &:not(:last-child) {
       margin-bottom: 20px;
     }
+  }
+
+  @include rmax($sm) {
+    padding: 24px;
   }
 }
