fix close button

--- a/app/scss/components/_modals.scss
+++ b/app/scss/components/_modals.scss
@@ -26,6 +26,7 @@
     display: none;
     align-items: center;
     justify-content: center;
+    margin: 0 15px;
     min-height: 505px;
     max-width: 570px;
     background-color: #fff;
@@ -45,6 +46,7 @@
     width: 16px;
     height: 16px;
     background-image: url("../images/close.svg");
+    background-color: transparent;
     cursor: pointer;
   }
 }
