added cost section

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,4 +10,5 @@
 @import "parts/advantages";
 @import "parts/skills";
 @import "parts/conclusion";
+@import "parts/cost";
 @import "components/footer";
