added reviews section

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -11,4 +11,5 @@
 @import "parts/skills";
 @import "parts/conclusion";
 @import "parts/cost";
+@import "parts/reviews";
 @import "components/footer";
