added start section

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -12,4 +12,5 @@
 @import "parts/conclusion";
 @import "parts/cost";
 @import "parts/reviews";
+@import "parts/start";
 @import "components/footer";
