--- a/app/html/components/_footer.html
+++ b/app/html/components/_footer.html
@@ -1,7 +1,13 @@
 </main>
 
-<footer class="footer">
-  <div class="container">
-    
+<footer class="footer" style="background-image: url('images/footer-bg.jpg');">
+  <div class="container footer__container">
+    <h2 class="footer__title title title--sm title--center">
+      Остался вопрос или нужна консультация? Свяжитесь с нами, мы с радостью вам поможем
+    </h2>
+    <div class="footer__btns d-flex">
+      <a class="footer__btn btn btn--sm" href="mailto:@mail@mail.com">Задать вопрос</a>
+      <button class="footer__btn btn btn--sm" type="button" data-path="order">Записаться на курс</button>
+    </div>
   </div>
 </footer>
