--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -1,3 +1,48 @@
 .footer {
-  // Styles
+  position: relative;
+  overflow: hidden;
+  padding: 100px 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($dark-blue, 0.75);
+  }
+
+  // &__container {
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  // }
+
+  &__title {
+    z-index: 3;
+    margin: 0 auto 52px;
+    max-width: 970px;
+    color: $white;
+  }
+
+  &__btns {
+    position: relative;
+    z-index: 3;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  &__btn {
+    display: block;
+    margin: 0 15px 24px;
+    text-align: center;
+
+    &:last-child {
+      color: $dark-blue;
+      background-color: $white;
+    }
+  }
 }
