fixed perfectPixel, check html/css at w3c - 100%

--- a/app/html/components/_footer.html
+++ b/app/html/components/_footer.html
@@ -1,7 +1,7 @@
 </main>
 
 <footer class="footer" style="background-image: url('images/footer-bg.jpg');">
-  <div class="container footer__container">
+  <div class="container">
     <h2 class="footer__title title title--sm title--center">
       Остался вопрос или нужна консультация? Свяжитесь с нами, мы с радостью вам поможем
     </h2>
