--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -16,6 +16,7 @@ body {
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1;
+  color: $dark;
 }
 
 a {
@@ -109,7 +110,7 @@ p {
   outline: transparent;
   border: none;
   border-radius: 30px;
-  padding: 16px 40px;
+  padding: 17px 40px;
   min-width: 370px;
   font-family: "Montserrat";
   font-weight: 700;
