--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   position: relative;
   overflow: hidden;
-  padding: 100px 0;
+  padding: 100px 0 76px;
   background-size: cover;
   background-repeat: no-repeat;
 
@@ -15,16 +15,10 @@
     background-color: rgba($dark-blue, 0.75);
   }
 
-  // &__container {
-  //   display: flex;
-  //   flex-direction: column;
-  //   align-items: center;
-  // }
-
   &__title {
     z-index: 3;
-    margin: 0 auto 52px;
-    max-width: 970px;
+    margin: 0 auto 54px;
+    max-width: 960px;
     color: $white;
   }
 
@@ -43,6 +37,24 @@
     &:last-child {
       color: $dark-blue;
       background-color: $white;
+      transition: background-color 0.3s, color 0.3s;
+
+      &:focus {
+        box-shadow: inset 0 0 0 4px rgba($dark-blue, 0.5);
+      }
+
+      &:hover {
+        background-color: $light-purple;
+      }
+
+      &:active {
+        color: $white;
+        background-color: $dark-purple;
+      }
     }
+  }
+
+  @include rmax($sm) {
+    padding: 48px 0;
   }
 }
