--- a/app/scss/components/_modals.scss
+++ b/app/scss/components/_modals.scss
@@ -13,7 +13,7 @@
     background-color: rgba($black, 0.7);
     opacity: 0;
     visibility: hidden;
-    transition: opacity 0.5s, visibility 0.5s;
+    transition: opacity 1s, visibility 1s;
 
     &--visible {
       opacity: 1;
@@ -29,7 +29,6 @@
     margin: 0 15px;
     border-radius: 20px;
     background-color: #fff;
-    transition: transform 0.3s;
 
     &--visible {
       display: flex;
@@ -106,7 +105,6 @@
     display: inline-block;
     margin-bottom: 8px;
     font-weight: 800;
-    color: $dark;
   }
 
   &__text {
@@ -180,7 +178,6 @@
     font-family: "Montserrat";
     font-weight: 700;
     font-size: 1.4rem;
-    color: $dark;
 
     @include rmax($sm) {
       text-align: center;
@@ -210,7 +207,7 @@
     }
 
     &:active {
-      box-shadow: inset 0 0 30px 1px rgba($dark, 0.3)
+      box-shadow: inset 0 0 30px 1px rgba($dark, 0.3);
     }
 
     @include rmax($sm) {
