--- a/app/scss/parts/_cost.scss
+++ b/app/scss/parts/_cost.scss
@@ -1,9 +1,9 @@
 .cost {
-  padding: 120px 0 60px;
+  padding: 115px 0 80px;
   background-color: rgba($light-purple, 0.2);
 
   &__title {
-    margin-bottom: 52px;
+    margin-bottom: 57px;
 
     @include rmax($sm) {
       margin-bottom: 32px;
@@ -16,7 +16,6 @@
     font-family: "Montserrat";
     font-weight: 700;
     text-align: center;
-    color: $dark;
   }
 
   &__btns {
@@ -24,7 +23,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    margin-bottom: 60px;
+    margin-bottom: 25px;
 
     @include rmax($sm) {
       margin-bottom: 32px;
@@ -34,7 +33,7 @@
   &__btn {
     display: flex;
     align-items: center;
-    margin: 0 15px 32px;
+    margin: 0 8px 32px;
     outline: transparent;
     border: 1px solid rgba($dark, 0.5);
     border-radius: 40px;
@@ -42,7 +41,6 @@
     width: 100%;
     max-width: 200px;
     font-size: 1.4rem;
-    color: $dark;
     background-color: transparent;
     transition: border-color 0.3s;
     cursor: pointer;
@@ -76,7 +74,7 @@
   }
 
   &__content {
-    margin-bottom: 60px;
+    margin-bottom: 62px;
 
     @include rmax($sm) {
       margin-bottom: 32px;
@@ -85,12 +83,12 @@
 
   &__text {
     display: block;
-    margin-bottom: 16px;
+    margin-bottom: 18px;
     font-family: "Montserrat";
     font-weight: 800;
     font-size: 24px;
+    line-height: 1.3;
     text-align: center;
-    color: $dark;
   }
 
   &__price {
@@ -100,7 +98,7 @@
   &__order {
     display: block;
     margin: 0 auto;
-    padding: 16px 10px;
+    padding: 18px 10px;
     font-size: 1.4rem;
   }
 
