--- a/app/scss/parts/_reviews.scss
+++ b/app/scss/parts/_reviews.scss
@@ -1,9 +1,9 @@
 .reviews {
-  padding: 120px 0 60px;
+  padding: 135px 0 60px;
 
   &__slider {
     overflow: hidden;
-    margin-bottom: 60px;
+    margin-bottom: 57px;
     width: 100%;
 
     .swiper-pagination-bullet {
@@ -16,18 +16,22 @@
         box-shadow: none;
         background-color: $dark-blue;
       }
+
+      &:not(:last-child) {
+        margin-right: 12px;
+      }
     }
   }
 
   &__wrapper {
     display: flex;
-    margin-bottom: 80px;
+    margin-bottom: 83px;
     width: 100%;
     height: 100%;
   }
 
   &__title {
-    margin: 0 auto 60px;
+    margin: 0 auto 62px;
     max-width: 680px;
   }
 
@@ -52,7 +56,6 @@
     font-weight: 800;
     font-size: 20px;
     line-height: 1.3;
-    color: $dark;
   }
 
   &__pagination {
