--- a/app/scss/parts/_skills.scss
+++ b/app/scss/parts/_skills.scss
@@ -29,12 +29,13 @@
   }
 
   &__title {
-    margin-bottom: 52px;
+    margin: 0 auto 54px;
+    max-width: 970px;
     color: $white;
   }
 
   &__wrapper {
-    margin-bottom: 64px;
+    margin-bottom: 52px;
     width: 100%;
     height: 100%;
 
@@ -46,7 +47,7 @@
   &__slide {
     flex-shrink: 0;
     border-radius: 10px;
-    padding: 92px 32px 32px;
+    padding: 94px 33px 32px;
     width: 100%;
     min-height: 464px;
     max-width: 370px;
@@ -56,7 +57,7 @@
 
   &__lvl {
     position: relative;
-    margin-bottom: 28px;
+    margin-bottom: 34px;
     font-weight: 800;
     font-size: 2rem;
     color: $dark-blue;
@@ -74,9 +75,8 @@
 
   &__caption {
     display: inline-block;
-    margin-bottom: 8px;
+    margin-bottom: 11px;
     font-weight: 800;
-    color: $dark;
   }
 
   &__text {
