--- a/app/scss/parts/_start.scss
+++ b/app/scss/parts/_start.scss
@@ -1,11 +1,12 @@
 .start {
-  padding: 60px 0;
+  padding: 40px 0 73px;
 
   &__wrapper {
     position: relative;
     overflow: hidden;
     border-radius: 30px;
-    padding: 97px 70px 60px;
+    padding: 93px 70px 60px;
+    min-height: 541px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -38,7 +39,7 @@
 
   &__title {
     z-index: 1;
-    margin-bottom: 32px;
+    margin-bottom: 43px;
     max-width: 800px;
     color: $white;
 
@@ -78,7 +79,7 @@
     }
 
     &:not(:last-child) {
-      margin-bottom: 12px;
+      margin-bottom: 16px;
     }
   }
 
