--- a/app/scss/parts/_teachers.scss
+++ b/app/scss/parts/_teachers.scss
@@ -1,8 +1,8 @@
 .teachers {
-  padding: 60px 0;
+  padding: 60px 0 70px;
 
   &__title {
-    margin-bottom: 60px;
+    margin-bottom: 64px;
   }
 
   &__slider {
@@ -19,6 +19,7 @@
   &__slide {
     position: relative;
     flex-shrink: 0;
+    min-height: 450px;
     text-align: center;
 
     &--active {
@@ -39,14 +40,16 @@
     }
 
     &--prev {
-      transform: translateX(915px) translateY(45px);
+      transform: translateX(895px) translateY(40px);
+
       @include rmax($lg) {
         transform: none;
       }
     }
 
     &--next {
-      transform: translateX(-915px) translateY(45px);
+      transform: translateX(-895px) translateY(40px);
+
       @include rmax($lg) {
         transform: none;
       }
@@ -55,7 +58,7 @@
 
   &__photo {
     position: relative;
-    margin: 0 auto 40px;
+    margin: 0 auto 43px;
     border-radius: 50%;
     width: 120px;
     height: 120px;
@@ -74,7 +77,7 @@
 
   &__name {
     display: none;
-    margin-bottom: 20px;
+    margin-bottom: 24px;
     font-family: "Montserrat";
     font-weight: 800;
     font-size: 2.8rem;
@@ -90,14 +93,16 @@
     max-width: 770px;
 
     &:not(:last-child) {
-      margin-bottom: 20px;
+      margin-bottom: 24px;
     }
   }
 
   &__btns {
     display: flex;
     justify-content: space-between;
-    transform: translateY(-335px);
+    margin: 0 auto;
+    max-width: 970px;
+    transform: translateY(-361px);
   }
 
   &__btn {
@@ -106,6 +111,8 @@
     width: 13px;
     height: 21px;
     background-image: url("../images/teacher-btn.svg");
+    background-position: center;
+    background-repeat: no-repeat;
     background-color: transparent;
     cursor: pointer;
 
