--- a/app/scss/parts/_cost.scss
+++ b/app/scss/parts/_cost.scss
@@ -50,8 +50,9 @@
       margin-right: 12px;
       border: 1px solid rgba($dark, 0.3);
       border-radius: 50%;
-      width: 20px;
+      width: 100%;
       height: 20px;
+      max-width: 20px;
     }
 
     &:focus {
