--- a/app/scss/parts/_hero.scss
+++ b/app/scss/parts/_hero.scss
@@ -23,12 +23,16 @@
   }
 
   &__title {
+    @include text-rows(2);
+
     margin-bottom: 34px;
     max-width: 600px;
     color: $white;
   }
 
   &__text {
+    @include text-rows(8);
+
     margin-bottom: 68px;
     max-width: 570px;
     color: $white;
@@ -40,6 +44,9 @@
     top: 0;
     z-index: 0;
     border-bottom-left-radius: 50px;
+    height: 868px;
+    max-width: 635px;
+    object-fit: cover;
 
     @include rmax($xl) {
       display: none;
