--- a/app/scss/parts/_reviews.scss
+++ b/app/scss/parts/_reviews.scss
@@ -47,6 +47,8 @@
     border-radius: 50%;
     width: 120px;
     height: 120px;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 
   &__name {
@@ -56,6 +58,10 @@
     font-weight: 800;
     font-size: 20px;
     line-height: 1.3;
+  }
+
+  &__text {
+    @include text-rows(8);
   }
 
   &__pagination {
