--- a/app/scss/parts/_utility.scss
+++ b/app/scss/parts/_utility.scss
@@ -42,6 +42,8 @@
   }
 
   &__caption {
+    @include text-rows(3);
+
     margin-bottom: 24px;
     min-height: 78px;
     font-family: "Montserrat";
@@ -56,6 +58,8 @@
   }
 
   &__text {
+    @include text-rows(7);
+
     &:not(:last-child) {
       margin-bottom: 24px;
 
