added page with form

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,4 +14,6 @@
 @import "parts/reviews";
 @import "parts/start";
 @import "parts/teachers";
+@import "parts/congratulation";
+@import "parts/questionnaire";
 @import "components/footer";
