--- a/app/html/components/_footer.html
+++ b/app/html/components/_footer.html
@@ -6,8 +6,8 @@
       Остался вопрос или нужна консультация? Свяжитесь с нами, мы с радостью вам поможем
     </h2>
     <div class="footer__btns d-flex">
-      <a class="footer__btn btn btn--sm" href="mailto:@mail@mail.com">Задать вопрос</a>
-      <button class="footer__btn btn btn--sm" type="button" data-path="order">Записаться на курс</button>
+      <a class="footer__btn btn btn--sm wow bounceIn" href="mailto:@mail@mail.com">Задать вопрос</a>
+      <button class="footer__btn btn btn--sm wow bounceIn" type="button" data-path="order">Записаться на курс</button>
     </div>
   </div>
 </footer>
