--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -21,7 +21,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 1.6rem;
     letter-spacing: 1px;
@@ -47,7 +47,7 @@
       position: absolute;
       left: 50%;
       bottom: -10px;
-      font-family: "Lato";
+      font-family: "Lato", sans-serif;
       font-weight: 400;
       font-size: 1rem;
       white-space: nowrap;
