--- a/app/scss/parts/_hero.scss
+++ b/app/scss/parts/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   min-height: 768px;
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
   background-color: $dark-blue;
 
   &__offer {
