--- a/app/scss/parts/_reviews.scss
+++ b/app/scss/parts/_reviews.scss
@@ -54,7 +54,7 @@
   &__name {
     display: inline-block;
     margin-bottom: 24px;
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 800;
     font-size: 20px;
     line-height: 1.3;
