--- a/app/scss/parts/_start.scss
+++ b/app/scss/parts/_start.scss
@@ -72,7 +72,7 @@
       content: counter(list) ".";
       margin-right: 16px;
       min-width: 25px;
-      font-family: "Montserrat";
+      font-family: "Montserrat", sans-serif;
       font-weight: 800;
       font-size: 24px;
       color: $red;
