--- a/app/scss/parts/_teachers.scss
+++ b/app/scss/parts/_teachers.scss
@@ -79,7 +79,7 @@
   &__name {
     display: none;
     margin-bottom: 24px;
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 800;
     font-size: 2.8rem;
 
