--- a/app/scss/parts/_utility.scss
+++ b/app/scss/parts/_utility.scss
@@ -28,7 +28,7 @@
       position: absolute;
       right: 32px;
       bottom: 21px;
-      font-family: "Montserrat";
+      font-family: "Montserrat", sans-serif;
       font-weight: 800;
       font-size: 19rem;
       color: rgba($light-purple, 0.4);
@@ -46,7 +46,7 @@
 
     margin-bottom: 24px;
     min-height: 78px;
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 800;
     font-size: 2rem;
     line-height: 1.3;
