--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -44,7 +44,7 @@ p {
 
 .title {
   position: relative;
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
   font-weight: 800;
   font-size: 4rem;
   line-height: 1.3;
@@ -56,7 +56,7 @@ p {
     left: 0;
     top: -34px;
     padding-left: 52px;
-    font-family: "Lato";
+    font-family: "Lato", sans-serif;
     font-weight: 400;
     font-size: 1.4rem;
     white-space: nowrap;
@@ -98,7 +98,7 @@ p {
 }
 
 .text {
-  font-family: "Lato";
+  font-family: "Lato", sans-serif;
   line-height: 1.5;
 
   @include rmax($sm) {
@@ -112,7 +112,7 @@ p {
   border-radius: 30px;
   padding: 17px 40px;
   min-width: 370px;
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 1.6rem;
   color: $white;
