--- a/app/scss/parts/_advantages.scss
+++ b/app/scss/parts/_advantages.scss
@@ -60,7 +60,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 12px;
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 800;
     font-size: 2rem;
 
