--- a/app/scss/parts/_benefits.scss
+++ b/app/scss/parts/_benefits.scss
@@ -34,7 +34,7 @@
   }
 
   &__text {
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     line-height: 1.5;
     text-align: center;
   }
