--- a/app/scss/parts/_cost.scss
+++ b/app/scss/parts/_cost.scss
@@ -13,7 +13,7 @@
   &__choose {
     display: block;
     margin-bottom: 32px;
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     text-align: center;
   }
@@ -85,7 +85,7 @@
   &__text {
     display: block;
     margin-bottom: 18px;
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 800;
     font-size: 24px;
     line-height: 1.3;
