--- a/app/scss/parts/_questionnaire.scss
+++ b/app/scss/parts/_questionnaire.scss
@@ -31,7 +31,7 @@
   &__caption {
     display: block;
     margin-bottom: 24px;
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 800;
     font-size: 24px;
   }
